; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_serialize.c_CRYPT_ReadSerializedStoreFromBlob.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_serialize.c_CRYPT_ReadSerializedStoreFromBlob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.BlobReader = type { i32, i32* }

@read_blob_wrapper = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CRYPT_ReadSerializedStoreFromBlob(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.BlobReader, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds %struct.BlobReader, %struct.BlobReader* %5, i32 0, i32 0
  %7 = load i32*, i32** %3, align 8
  %8 = ptrtoint i32* %7 to i32
  store i32 %8, i32* %6, align 8
  %9 = getelementptr inbounds %struct.BlobReader, %struct.BlobReader* %5, i32 0, i32 1
  store i32* null, i32** %9, align 8
  %10 = load i32, i32* @read_blob_wrapper, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @CRYPT_ReadSerializedStore(%struct.BlobReader* %5, i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @CRYPT_ReadSerializedStore(%struct.BlobReader*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
